# 4-steps-python-demo-on-cf

./: .gitignore  FAQ.md  README.md
01-cf-quotes-random/: README.md  __init__.py  app.py  manifest-pip.yml  manifest-uv.yml  pyproject.toml  quotes.py  requirements.txt
02-cf-quotes-postgres/: README.md  Untitled  __init__.py  app.py  database.py  manifest-pip.yml  manifest-uv.yml  pyproject.toml  quotes.py  requirements.txt
02-cf-quotes-postgres/tanzu_utils/: cfpostgres.py
02-cf-quotes-postgres/utils/: __init__.py
03-cf-quotes-semantic/: .gitignore  README.md  __init__.py  app.py  manifest-pip.yml  manifest-uv.yml  pyproject.toml  quotes.py  requirements.txt
03-cf-quotes-semantic/tanzu_utils/: cfgenai.py
03-cf-quotes-semantic/utils/: __init__.py  cfpostgres.py
04-cf-quotes-mcp/: README.md  __init__.py  app.py  embeddings.py  manifest-pip.yml  manifest-uv.yml  pyproject.toml  requirements.txt  similarity.py  vector_store.py
