[project]
name = "cf-quotes-mcp-04"
version = "1.0.0"
description = "Semantic Quotes MCP Server - Cloud Foundry demo with Python"
requires-python = ">=3.11"
dependencies = [
    # FastMCP - MCP server framework
    "fastmcp<3",  # Use stable v2 (v3 is in beta)
    
    # FastAPI - For HTTP endpoints (health check) and FastMCP integration
    "fastapi",
    "uvicorn",
    
    # LangChain dependencies
    "langchain-core",
    "langchain-community",
    "langchain-postgres",
    
    # Cloud Foundry service binding
    "cfenv",
    
    # Database adapter
    "psycopg2",
    
    # HTTP client for embedding API calls
    "requests",
]

